--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "ejs": "^3.1.6",
     "express": "~4.16.1",
     "express-handlebars": "^6.0.2",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0"
+    "http-errors": "~1.6.3"
   },
   "main": "src/app.js",
   "repository": {
